# coding-tools-mcp

./: .gitignore  BENCHMARK.md  CODEX_GOAL_MODE_MCP_RUNTIME_TASK.md  COMPLIANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml  start-sandbox.yml
apps/desktop-client/: README.md  main.py
benchmarks/: __init__.py  mcp_http.py  real_workloads.py  runtime_latency.py
benchmarks/dogfood/: README.md  mcp_deterministic_runner.py
benchmarks/swebench/: run_smoke.py
cloudflare/sandbox-control/: README.md  wrangler.toml
coding_tools_mcp/: __init__.py  landlock_exec.py  server.py
docs/: chatgpt-remote-mcp.md  ci-and-tests.md  competitive-analysis.md  docker.md  dogfood.md  embedding.md  mcp-client-config.md  profile-v0.1.md  profile.md  quickstart.md  remote-mcp.md  tools-and-schemas.md  troubleshooting-exec.md  troubleshooting.md
docs/dogfood/: coding-tools-dogfood-transcript.json
npm/coding-tools-mcp/: README.md  package.json
reports/: final.md
reports/compliance/: latest.json  latest.md
reports/dogfood/: coding-tools-dogfood.json  coding-tools-dogfood.md
reports/subagents/: ci.md  release-docs.md  security-sandbox.md
scripts/: install.sh  publish-pypi.sh  render_final_report.py  tunnel-cloudflared.sh  tunnel-common.sh  tunnel-devtunnel.sh  tunnel-ngrok.sh  tunnel.sh
tests/compliance/: __init__.py  fixtures.py  mcp_client.py  runner.py  test_compliance_report.py  test_docs_required.py  test_dogfood.py  test_e2e.py  test_mcp_contract.py  test_runtime_helpers.py  (+4 more)
(+10 files in other folders)
