[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tools-mcp"
version = "0.1.3"
description = "Workspace-confined coding tools exposed as an MCP server."
requires-python = ">=3.11"
readme = "README.md"
license = "LicenseRef-Coding-Tools-MCP-Source-Available"
authors = [{ name = "Coding Tools MCP Contributors" }]

[project.urls]
Homepage = "https://github.com/ytagent/codex-tool-runtime-mcp"
Documentation = "https://github.com/ytagent/codex-tool-runtime-mcp/tree/main/docs"
Source = "https://github.com/ytagent/codex-tool-runtime-mcp"
Issues = "https://github.com/ytagent/codex-tool-runtime-mcp/issues"

[project.optional-dependencies]
dev = [
  "mypy>=2.1,<2.2",
  "ruff>=0.15,<0.16",
  "typing_extensions>=4.12",
]
image = [
  "Pillow>=10.0",
]

[project.scripts]
coding-tools-mcp = "coding_tools_mcp.server:main"

[tool.setuptools.packages.find]
include = ["coding_tools_mcp*"]
